tests/valid/06_multiple_assignments.brl
base := 10;
limit := base * 2 + 5;
allowed := limit >= 20 and not false;
print allowed;
