tests/invalid/05_dangling_and_operator.brl
approved := income > 5000 and ;
print approved;
